--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,14 @@ boto3==1.28.45
 botocore==1.31.45
 click==8.1.7
 colorama==0.4.6
+conda-pack==0.7.1
 Deprecated==1.2.14
 Flask==2.3.3
 Flask-HTTPAuth==4.8.0
 Flask-Limiter==3.5.0
 Flask-Login==0.6.2
 greenlet==2.0.2
+gunicorn==21.2.0
 importlib-resources==6.0.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
